--- a/css-responsive-menu/assets/css/resets-and-helpers.css
+++ b/css-responsive-menu/assets/css/resets-and-helpers.css
@@ -5,41 +5,6 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}a:focus,a:active,a:hover{outline:0}b,strong{font-weight:bold}dfn{font-style:italic}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0;-ms-interpolation-mode:bicubic}svg:not(:root){overflow:hidden}figure,form{margin:0}legend{border:0;padding:0;white-space:normal;*margin-left:-7px}button,input,select,textarea{font-family:sans-serif;font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer;*overflow:visible}button[disabled],input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0;*height:13px;*width:13px}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}
 
 /***************************************
-* Custom fonts stylesheet
-***************************************/
-
-/***************************************
-* use same font-family name for all fonts in the same family,
-* change styles and weights in right order as listed below
-*
-* Font declaration order:
-* 1) Weights
-*    a) 400 // normal
-*    b) 700 // bold
-*    c) 200 // light
-* 2) Styles
-*    a) normal
-*    b) italic
-* 3) Mixed [optional]
-*    a) bold-italic
-*    b) light-italic
-*    c) ...
-***************************************/
-
-/*
-@font-face {
-    font-family: 'FONT_FAMILY';
-    src: url('../fonts/FONT_FILE.eot');
-    src: url('../fonts/FONT_FILE.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/FONT_FILE.woff') format('woff'),
-         url('../fonts/FONT_FILE.ttf') format('truetype'),
-         url('../fonts/FONT_FILE.svg#hello_typeregular') format('svg');
-    font-weight: XXX;
-    font-style: normal/italic;
-}
-*/
-
-/***************************************
 * General setup and helpers 
 ***************************************/
 
@@ -57,7 +22,7 @@ html, body {
 }
 
 .content {
-    padding-bottom : 10px; /* this has to be at least equal to the outer height of the footer (border, padding, and margin included). */
+    padding-bottom : 0; /* this has to be at least equal to the outer height of the footer (border, padding, and margin included). */
 }
 
 footer {
@@ -97,38 +62,6 @@ footer {
 * Helpers and Fixes
 ***************************************/
 
-.red-bg {
-    background-color : #f00;
-}
-
-.green-bg {
-    background-color : #0f0;
-}
-
-.blue-bg {
-    background-color : #00f;
-}
-
-.white-bg {
-    background-color : #fff;
-}
-
-.black-bg {
-    background-color : #000;
-}
-
-.wrapped {
-    display      : block;
-    position     : relative;
-    margin-left  : auto;
-    margin-right : auto;
-}
-
-.col {
-    position : relative;
-    float    : left;
-}
-
 html, body {
     height : 100%;
     width  : 100%;
@@ -160,92 +93,3 @@ textarea {
 h1 {
     padding: 15px;
 }
-/***************************************
-* Structure
-***************************************/
-.responsive-menu {
-  height: auto;
-  overflow: hidden;
-  cursor: pointer;
-}
-.responsive-menu-voice {
-  float: left;
-  height: 30px;
-  line-height: 30px;
-}
-/***************************************
-* Styles goes here
-***************************************/
-.main-menu {
-  background: #e9e9e9;
-}
-.main-menu a {
-  padding: 0 5px;
-  color: #333;
-  font: 400 14px/14px Arial, Helvetica, Sans-Serif;
-  text-decoration: none;
-  text-transform: capitalize;
-}
-.main-menu .main-menu-voice {
-  background: #e9e9e9;
-}
-.main-menu .main-menu-voice:hover {
-  background: #e0e0e0;
-}
-.main-menu .main-menu-voice:hover a {
-  text-decoration: underline;
-}
-/***************************************
-* mediaquery overrides
-***************************************/
-/* Landscape phone to portrait tablet */
-@media only screen and (max-width: 768px) {
-  /***************************************
-* Structure
-***************************************/
-  .responsive-menu:before {
-    /* responsive-menu-opener.png width 30px, height 30px */
-    content: url('../gfx/responsive-menu-opener.png');/* opener's height should match wrapper height */
-  }
-  .responsive-menu:active,
-  .responsive-menu:hover {
-    height: auto;
-  }
-  .responsive-menu:active:before,
-  .responsive-menu:hover:before {
-    /* hover status for menu opener, just override content:...; */
-    content: url('../gfx/responsive-menu-opener-hover.png');
-  }
-  .responsive-menu {
-    height: 30px;/* wrapper height should match opener's height */
-  }
-  .responsive-menu-voices {
-    margin: 0;
-  }
-  .responsive-menu-voice {
-    float: none;
-  }
-  .responsive-menu-voice-link {
-    display: block;
-  }
-  /***************************************
-* Styles goes here
-***************************************/
-  .main-menu {
-    background: #d5d5d5;
-  }
-  .main-menu a {
-    line-height: 35px;
-  }
-  .main-menu .main-menu-voice {
-    height: 35px;
-    line-height: 35px;
-  }
-  .main-menu .main-menu-voice:active a,
-  .main-menu .main-menu-voice:hover a {
-    text-decoration: none;
-    padding-left: 10px;
-  }
-} /***************************************
-* Puts your IE specific styles here
-***************************************/
